--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -19,7 +19,7 @@
     state: present
     update_cache: yes
     cache_valid_time: "{{apt_cache_valid_time | default (3600)}}"
-  with_items: ["python-psycopg2", "python-pycurl", "locales"]
+  with_items: ["python-psycopg2", "python-pycurl"]
 
 - name: PostgreSQL | Install PostgreSQL
   apt:
@@ -32,3 +32,12 @@
     - "postgresql-{{postgresql_version}}"
     - "postgresql-client-{{postgresql_version}}"
     - "postgresql-contrib-{{postgresql_version}}"
+
+- name: PostgreSQL | PGTune
+  apt:
+    name: pgtune
+    state: present
+    update_cache: yes
+    cache_valid_time: "{{apt_cache_valid_time | default (3600)}}"
+  environment: postgresql_env
+  when: postgresql_pgtune
